testsuite/tests/rename/T24452/T24452b.stderr
T24452b.hs:10:3: error: [GHC-54721]
    ‘empty’ is not a (visible) method of class ‘Alternative’